tests/failing/incompatype_type_test.rs
use redbit::*;

#[entity]
enum Enum {
    Variant1,
    Variant2,
}

fn main() {
    // If it compiles successfully, we're good.
}
